# kuso-entertainment-mcp

./: .gitignore  .iterations  README.md  pyproject.toml
.github/workflows/: claude-code.yaml
.kiro/agents/: default-agent.json
.kiro/steering/: principle.md
kuso_agent/: .env.example  .gitignore  .iterations  README.md  architecture.drawio  construct.py  main.py
kuso_agent/kuso_infra/: __init__.py  build_lambdas.sh  kuso_infra.yaml
kuso_agent/kuso_infra/lambdas/: start_viewing.py
simulations/: README.md  run_with_cloudwatch.sh  script.md  simulator.py
tests/: test_agentcore_browser_youtube.py
