[project]
name = "kuso-entertainment-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bedrock-agentcore>=1.1.1",
    "bedrock-agentcore-starter-toolkit>=0.2.5",
    "boto3>=1.42.9",
    "strands-agents>=1.19.0",
    "strands-agents-evals>=0.1.0",
    "strands-agents-tools>=0.2.17",
    "yt-dlp>=2024.12.6",
    "youtube-transcript-api>=1.0.3",
]

[dependency-groups]
dev = [
    "aws-opentelemetry-distro>=0.14.0",
    "pytest>=9.0.2",
    "ruff>=0.14.9",
]
